# ndk

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/imc/ndkcmake/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/head/: main.h
app/src/main/cpp/source/: main.cpp
app/src/main/java/com/imc/ndkcmake/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/imc/ndkcmake/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
